--- a/src/KeePassWin/project.json
+++ b/src/KeePassWin/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "Autofac": "4.0.0-beta8-157",
     "Microsoft.ApplicationInsights": "1.0.0",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
     "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
