--- a/src/KeePassWin/project.json
+++ b/src/KeePassWin/project.json
@@ -1,10 +1,10 @@
 ﻿{
   "dependencies": {
-    "Autofac": "4.0.0-beta8-157",
     "Microsoft.ApplicationInsights": "1.0.0",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
     "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Prism.Autofac": "6.1.1"
   },
   "frameworks": {
     "uap10.0": {}
