--- a/src/KeePass.Models/KeePass.Models.csproj
+++ b/src/KeePass.Models/KeePass.Models.csproj
@@ -117,6 +117,7 @@
     <Compile Include="IDatabaseUnlocker.cs" />
     <Compile Include="ItemModelBase.cs" />
     <Compile Include="KeePassExtensions.cs" />
+    <Compile Include="KeePassId.cs" />
     <Compile Include="KeePassInterfaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XmlKeePassDatabase.cs" />
