--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+/src/KeePassWin/BundleArtifacts
+/src/KeePassWin/_pkginfo.txt
