Create DatabaseGroupParameter to track which database and group is showing

--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -105,6 +105,7 @@
     <Compile Include="AppShell.xaml.cs">
       <DependentUpon>AppShell.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\DatabaseGroupParameter.cs" />
     <Compile Include="IO\DialogDatabaseUnlocker.cs" />
     <Compile Include="ViewModels\PasswordDialogViewModel.cs" />
     <Compile Include="WinKeePassModule.cs" />
