--- a/GitVersionConfig.yaml
+++ b/GitVersionConfig.yaml
@@ -1,3 +1,5 @@
 assembly-versioning-scheme: MajorMinorPatchTag
-mode: ContinuousDeployment
+mode: ContinuousDelivery
 branches: {}
+next-version: 2.0.0
+
