--- a/GitVersionConfig.yaml
+++ b/GitVersionConfig.yaml
@@ -1,5 +1,5 @@
-assembly-versioning-scheme: MajorMinorPatchTag
+assembly-versioning-scheme: MajorMinorPatch
 mode: ContinuousDelivery
-branches: {}
 next-version: 2.0.0
+branches: {}
 
