--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,4 @@ ModelManifest.xml
 /src/KeePassWin/_pkginfo.txt
 /test/KeePassWinTest/KeePassWinTest.nuget.props
 /test/KeePassWinTest/KeePassWinTest.nuget.targets
+Package.StoreAssociation.xml
