--- a/src/KeePass.IO.Sqlite/project.json
+++ b/src/KeePass.IO.Sqlite/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "EntityFramework.Commands": "7.0.0-rc1-final",
     "EntityFramework.Sqlite": "7.0.0-rc1-final",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0"
   },
