--- a/src/KeePass.Models/KeePass.Models.csproj
+++ b/src/KeePass.Models/KeePass.Models.csproj
@@ -113,6 +113,7 @@
     <Compile Include="FileHeaders.cs" />
     <Compile Include="GroupItemModel.cs" />
     <Compile Include="ICacheService.cs" />
+    <Compile Include="IDatabaseTracker.cs" />
     <Compile Include="IDatabaseUnlocker.cs" />
     <Compile Include="ItemModelBase.cs" />
     <Compile Include="KeePassExtensions.cs" />
