--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -208,9 +208,9 @@
       <Project>{f515083e-9b92-4857-9a49-7933dd9c2804}</Project>
       <Name>KeePass.IO</Name>
     </ProjectReference>
-    <ProjectReference Include="..\KeePass.Models\KeePass.Models.csproj">
+    <ProjectReference Include="..\KeePassLib\KeePassLib.csproj">
       <Project>{b4d06dd3-1980-4f4e-9867-4e1625f8f14f}</Project>
-      <Name>KeePass.Models</Name>
+      <Name>KeePassLib</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
