--- a/src/KeePassLib/KeePassLib.csproj
+++ b/src/KeePassLib/KeePassLib.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{B4D06DD3-1980-4F4E-9867-4E1625F8F14F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KeePassLib</RootNamespace>
+    <RootNamespace>KeePass</RootNamespace>
     <AssemblyName>KeePassLib</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
@@ -107,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CrsAlgorithm.cs" />
+    <Compile Include="DatabaseUnlockException.cs" />
     <Compile Include="FileFormats.cs" />
     <Compile Include="FileHeaders.cs" />
     <Compile Include="HeaderFields.cs" />
