Reorganizing more crypto

--- a/src/KeePassLib/KeePassLib.csproj
+++ b/src/KeePassLib/KeePassLib.csproj
@@ -108,6 +108,8 @@
   <ItemGroup>
     <Compile Include="CrsAlgorithm.cs" />
     <Compile Include="Crypto\IRandomGenerator.cs" />
+    <Compile Include="Crypto\Rc4RandomGenerator.cs" />
+    <Compile Include="Crypto\Salsa20Cipher.cs" />
     <Compile Include="DatabaseUnlockException.cs" />
     <Compile Include="FileFormats.cs" />
     <Compile Include="FileHeaders.cs" />
