--- a/src/KeePass.IO/KeePass.IO.csproj
+++ b/src/KeePass.IO/KeePass.IO.csproj
@@ -110,7 +110,7 @@
     <Compile Include="Crypto\HashedBlockFileFormat.cs" />
     <Compile Include="Crypto\HashedInputStream.cs" />
     <Compile Include="Crypto\HashedOutputStream.cs" />
-    <Compile Include="Crypto\Salsa20RandomGenerator.cs" />
+    <Compile Include="Crypto\WindowsHashProvider.cs" />
     <Compile Include="Database\DatabaseCacheEvent.cs" />
     <Compile Include="Database\DatabaseCache.cs" />
     <Compile Include="Database\EncryptedDatabaseUnlocker.cs" />
