--- a/src/KeePassLib/KeePassLib.csproj
+++ b/src/KeePassLib/KeePassLib.csproj
@@ -107,9 +107,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CrsAlgorithm.cs" />
+    <Compile Include="Crypto\IHashProvider.cs" />
     <Compile Include="Crypto\IRandomGenerator.cs" />
+    <Compile Include="Crypto\IRandomGeneratorProvider.cs" />
+    <Compile Include="Crypto\RandomGeneratorProvider.cs" />
     <Compile Include="Crypto\Rc4RandomGenerator.cs" />
     <Compile Include="Crypto\Salsa20Cipher.cs" />
+    <Compile Include="Crypto\Salsa20RandomGenerator.cs" />
     <Compile Include="DatabaseUnlockException.cs" />
     <Compile Include="FileFormats.cs" />
     <Compile Include="FileHeaders.cs" />
