--- a/src/KeePassWin/project.json
+++ b/src/KeePassWin/project.json
@@ -5,6 +5,8 @@
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
     "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "EntityFramework.Commands": "7.0.0-rc1-final",
+    "EntityFramework.Sqlite": "7.0.0-rc1-final",
     "Newtonsoft.Json": "8.0.2",
     "Prism.Autofac": "6.1.1"
   },
