--- a/src/KeePassLib/KeePassLib.csproj
+++ b/src/KeePassLib/KeePassLib.csproj
@@ -107,6 +107,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CrsAlgorithm.cs" />
+    <Compile Include="Crypto\FileFormat.cs" />
+    <Compile Include="Crypto\HashedStream.cs" />
     <Compile Include="Crypto\IHashProvider.cs" />
     <Compile Include="Crypto\IRandomGenerator.cs" />
     <Compile Include="Crypto\IRandomGeneratorProvider.cs" />
@@ -114,18 +116,24 @@
     <Compile Include="Crypto\Rc4RandomGenerator.cs" />
     <Compile Include="Crypto\Salsa20Cipher.cs" />
     <Compile Include="Crypto\Salsa20RandomGenerator.cs" />
+    <Compile Include="DatabaseCache.cs" />
+    <Compile Include="DatabaseCacheEvent.cs" />
     <Compile Include="DatabaseUnlockException.cs" />
+    <Compile Include="EncryptedDatabaseUnlocker.cs" />
     <Compile Include="FileFormats.cs" />
     <Compile Include="FileHeaders.cs" />
     <Compile Include="HeaderFields.cs" />
     <Compile Include="IDatabaseTracker.cs" />
     <Compile Include="IDatabaseUnlocker.cs" />
     <Compile Include="IFile.cs" />
+    <Compile Include="IFilePicker.cs" />
     <Compile Include="KeePassExtensions.cs" />
     <Compile Include="KeePassId.cs" />
     <Compile Include="KeePassInterfaces.cs" />
+    <Compile Include="PasswordData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadHeaderResult.cs" />
+    <Compile Include="StreamUtils.cs" />
     <Compile Include="XmlKeePassDatabase.cs" />
     <Content Include="Properties\KeePass.Models.rd.xml" />
   </ItemGroup>
