Add a treeview in desktop view

--- a/src/KeePassWin/project.json
+++ b/src/KeePassWin/project.json
@@ -5,7 +5,8 @@
     "EntityFramework.Sqlite": "7.0.0-rc1-final",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Newtonsoft.Json": "8.0.3",
-    "Prism.Autofac": "6.1.1"
+    "Prism.Autofac": "6.1.1",
+    "winrtxamltoolkit": "2.0.0"
   },
   "frameworks": {
     "uap10.0": {}
