--- a/test/KeePassLib.Test/KeePassLib.Test.csproj
+++ b/test/KeePassLib.Test/KeePassLib.Test.csproj
@@ -40,11 +40,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="DecryptorTests.cs" />
+    <Compile Include="Utils\DotNetHashProvider.cs" />
+    <Compile Include="Utils\TestAssets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\AutoMock.cs" />
+    <Compile Include="Utils\MoqRegistrationHandler.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Assets\key-aes_rijndael_256.kdbx" />
+    <EmbeddedResource Include="Assets\key-aes_rijndael_256.key" />
+    <EmbeddedResource Include="Assets\password-aes_rijndael_256.kdbx" />
+    <EmbeddedResource Include="Assets\password-key-aes_rijndael_256.kdbx" />
+    <EmbeddedResource Include="Assets\password-key-aes_rijndael_256.key" />
     <None Include="project.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\KeePassLib\KeePassLib.csproj">
+      <Project>{b4d06dd3-1980-4f4e-9867-4e1625f8f14f}</Project>
+      <Name>KeePassLib</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
