--- a/src/KeePassWin/KeePassWin.csproj
+++ b/src/KeePassWin/KeePassWin.csproj
@@ -105,6 +105,7 @@
     <Compile Include="AppShell.xaml.cs">
       <DependentUpon>AppShell.xaml</DependentUpon>
     </Compile>
+    <Compile Include="IO\FileDatabaseTracker.cs" />
     <Compile Include="IO\Sqlite\KeePassSqliteContext.cs" />
     <Compile Include="IO\Sqlite\Migrations\20160229035622_InitialMigration.cs" />
     <Compile Include="IO\Sqlite\Migrations\20160229035622_InitialMigration.Designer.cs">
