--- a/test/KeePassLib.Test/KeePassLib.Test.csproj
+++ b/test/KeePassLib.Test/KeePassLib.Test.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\AutoMock.cs" />
     <Compile Include="Utils\MoqRegistrationHandler.cs" />
+    <Compile Include="Utils\TestIdGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Assets\key-aes_rijndael_256.kdbx" />
