Add basic test to verify XmlKeePassDatabase

--- a/test/KeePassLib.Test/KeePassLib.Test.csproj
+++ b/test/KeePassLib.Test/KeePassLib.Test.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Utils\AutoMock.cs" />
     <Compile Include="Utils\MoqRegistrationHandler.cs" />
     <Compile Include="Utils\TestIdGenerator.cs" />
+    <Compile Include="XmlKeePassTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Assets\key-aes_rijndael_256.kdbx" />
@@ -64,6 +65,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\db1.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
