--- a/src/KeePassWin/project.json
+++ b/src/KeePassWin/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "Autofac": "4.0.0-beta8-157",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "Newtonsoft.Json": "8.0.3",
     "Prism.Autofac": "6.1.1",
     "winrtxamltoolkit": "2.0.0"
