--- a/src/KeePassControls/KeePassControls.csproj
+++ b/src/KeePassControls/KeePassControls.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoSuggestQueryParameterConverter.cs" />
+    <Compile Include="NullObjectVisibilityConverter.cs" />
     <Compile Include="EntryItemListView.xaml.cs">
       <DependentUpon>EntryItemListView.xaml</DependentUpon>
     </Compile>
