--- a/test/KeePassLib.Test/KeePassLib.Test.csproj
+++ b/test/KeePassLib.Test/KeePassLib.Test.csproj
@@ -41,7 +41,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DecryptorTests.cs" />
-    <Compile Include="Utils\DotNetHashProvider.cs" />
     <Compile Include="Utils\TestAssets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\AutoMock.cs" />
@@ -55,6 +54,7 @@
     <EmbeddedResource Include="Assets\password-aes_rijndael_256.kdbx" />
     <EmbeddedResource Include="Assets\password-key-aes_rijndael_256.kdbx" />
     <EmbeddedResource Include="Assets\password-key-aes_rijndael_256.key" />
+    <None Include="App.config" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
