--- a/src/KeePassWin/project.json
+++ b/src/KeePassWin/project.json
@@ -1,10 +1,10 @@
 ﻿{
   "dependencies": {
-    "Autofac": "4.0.0-beta8-157",
+    "Autofac": "4.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "Newtonsoft.Json": "9.0.1",
-    "Prism.Autofac": "6.1.1",
+    "Prism.Autofac": "6.2.0",
     "winrtxamltoolkit": "2.0.0"
   },
   "frameworks": {
