--- a/test/KeePassLib.Test/KeePassLib.Test.csproj
+++ b/test/KeePassLib.Test/KeePassLib.Test.csproj
@@ -57,9 +57,9 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\KeePassLib\KeePassLib.csproj">
+    <ProjectReference Include="..\..\src\KeePassLib\KeePass.Models.csproj">
       <Project>{b4d06dd3-1980-4f4e-9867-4e1625f8f14f}</Project>
-      <Name>KeePassLib</Name>
+      <Name>KeePass.Models</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
