--- a/src/KeePassLib/project.json
+++ b/src/KeePassLib/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "supports": {},
   "dependencies": {
+    "KeePassLib": "2.34.0-ci0023",
     "Microsoft.NETCore": "5.0.1"
   },
   "frameworks": {
